test/src/e2e_vm_tests/test_programs/should_fail/storage_in_library/src/main.sw
contract;

mod inner;

abi Test {
    fn foo();
}

impl Test for Contract {
    fn foo() {
    }
}
